Fix card alignment

--- a/themes/spell/static/css/spell.css
+++ b/themes/spell/static/css/spell.css
@@ -158,6 +158,7 @@ body {
 
 #team .card {
     margin-bottom: 50px;
+    height: 400px;
 }
 
 #team p {
